# ollama-playground

./: README.md  requirements.txt
src/: chatter.py  pyproject.toml  run.py
src/formats/: pdf.py
