[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.14.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.30",
    "langchain-core>=0.3.76",
    "langchain-ollama>=0.3.8",
    "langchain-text-splitters>=0.3.11",
    "langgraph>=0.6.7",
    "pdfplumber>=0.11.7",
    "pymupdf>=1.26.4",
    "pymupdf4llm>=0.0.27",
    "typing-extensions>=4.15.0",
]
